--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
   }
   main{
     width: 100%;
@@ -48,6 +49,13 @@
     position: fixed;
     margin-top: 20px;
   }
+  .baslik h1{
+    background-color: blue; 
+    padding: 2px;
+    color: cornsilk;
+    border-radius: 4px;
+    margin-bottom: 17px;
+  }
   .girdiAlani{
     text-align: center;
     margin-top: 25%;
@@ -77,9 +85,13 @@
     padding: 3px 9px;
     position: fixed;
     bottom: 0;
-    background-color: yellow;
+    background-color: black;
+    color: white;
     width: 100%;
     border: none;
+  }
+  .info a{
+    color: aqua;
   }
   #idOk{
     padding: 9px;
